<resources>
    <string name="text_owner_name">Created By: Jesay</string>
    <string name="app_name">Android Lab</string>
    <string name="app_name_separated">Android \nLab</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_register">Register</string>
    <string name="text_submit">Submit</string>
    <string name="text_greeting_hello">Hello!</string>
    <string name="text_greeting_hello_1">Hello,</string>
    <string name="text_greeting_welcome">Welcome to Android Lab!</string>
    <string name="top_line_with_rounded_corner">A pink line with rounded corners.</string>
    <string name="text_name_label">Username</string>
    <string name="text_password_label">Password</string>
    <string name="text_email_label">Email Address</string>
    <string name="text_phone_number_label">Phone Number</string>
    <string name="text_country_label">Country</string>
    <string name="text_country_value">Philippines</string>
    <string name="text_country_select">Select Region</string>
    <string name="text_state_label">Province</string>
    <string name="text_state_select">Province</string>
    <string name="text_male_rb">Male</string>
    <string name="text_female_rb">Female</string>
    <string name="text_gender_label">Gender</string>
    <string name="text_interest_label">Interest</string>
    <string name="text_birthdate_label">Birth Date</string>
    <string name="text_birth_time_label">Birth Time</string>
    <string name="text_android_version_label">Android Lab ver 1.0.0</string>
    <string name="text_dialog_alert_label">SUBMITTED INFORMATION</string>
    <string name="text_cancel_label">Cancel</string>
    <string name="or">or</string>
    <string name="text_signin_underlined"><u>Sign Up</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="cd_user_profile">View Profile</string>
    <string name="text_infrared_communication">Infrared Communication</string>
    <string name="text_bluetooth_file_transfer">Bluetooth File Transfer in Android</string>
    <string name="text_identifying_bluetooth">Identifying Bluetooth in Wireless Range</string>
    <string name="text_country_flag">What\'s The Flag?</string>
    <string name="text_realtime_mc_services">Different Realtime Mobile Communicating Services</string>
    <string name="text_home_header_tagline">Explore different \ncourses and \napplications in \nAndroid Lab</string>
    <string name="text_applications">Applications</string>
    <string name="text_courses">Courses</string>
    <string name="cd_back_button">Back</string>
    <string name="text_difficulty_easy">Difficulty: Easy</string>
    <string name="title_summary">Summary</string>
    <string name="text_select_country">Select Country</string>
    <string name="text_get_flag">Get Flag!</string>
    <string name="calculator_sign">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pint">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="sign_PN">±</string>
    <string name="parenthesis">( )</string>
    <string name="percent">%</string>
    <string name="clear_all">C</string>
    <string name="cd_history">History</string>
    <string name="cd_backspace">Backspace</string>
    <string-array name="array_country_dropdown">
        <item>Bolivia</item>
        <item>Cambodia</item>
        <item>China</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>Mexico</item>
        <item>Philippines</item>
        <item>South Korea</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
    </string-array>
    <string-array name="array_region_dropdown">
        <item>Region I - Ilocos Region</item>
        <item>Region II - Cagayan Valley</item>
        <item>Region III - Central Luzon</item>
        <item>Region IV-A - CALABARZON</item>
        <item>Region IV-B - MIMAROPA</item>
        <item>Region V - Bicol Region</item>
        <item>Region VI Western Visayas</item>
        <item>Region VII Central Visayas</item>
        <item>Region VIII Eastern Visayas</item>
        <item>Region IX - Zamboanga Peninsula</item>
        <item>Region X - Northern Mindanao</item>
        <item>Region XI - Davao Region</item>
        <item>Region XII - SOCCSKSARGEN</item>
        <item>Region XIII - Caraga</item>
        <item>NCR - National Capital Region</item>
        <item>CAR - Cordillera Administrative Region</item>
        <item>BARMM - Bangsamoro Autonomous Region in Muslim Mindanao</item>
    </string-array>
    <string-array name="array_region_i_dropdown">
        <item>Ilocos Norte</item>
        <item>Ilocos Sur</item>
        <item>La Union</item>
        <item>Pangasinan</item>
    </string-array>
    <string-array name="array_region_ii_dropdown">
        <item>Batanes</item>
        <item>Cagayan</item>
        <item>Isabela</item>
        <item>Quirino</item>
        <item>Nueva Vizcaya</item>
    </string-array>
    <string-array name="array_region_iii_dropdown">
        <item>Bataan</item>
        <item>Bulacan</item>
        <item>Aurora</item>
        <item>Tarlac</item>
        <item>Pampanga</item>
        <item>Zambales</item>
        <item>Nueva Ecija</item>
    </string-array>
    <string-array name="array_region_iv_a_dropdown">
        <item>Batangas</item>
        <item>Cavite</item>
        <item>Laguna</item>
        <item>Quezon</item>
        <item>Manila</item>
        <item>Bulacan</item>
        <item>Cagayan De Oro</item>
    </string-array>
    <string-array name="array_region_iv_b_dropdown">
        <item>Occidental Mindoro</item>
        <item>Oriental Mindoro</item>
        <item>Marinduque</item>
        <item>Palawan</item>
        <item>Romblon</item>
    </string-array>
    <string-array name="array_region_v_dropdown">
        <item>Albay</item>
        <item>Camarines Norte</item>
        <item>Camarines Sur</item>
        <item>Catanduanes</item>
        <item>Sorsogon</item>
        <item>Masbate</item>
    </string-array>
    <string-array name="array_region_vi_dropdown">
        <item>Aklan</item>
        <item>Antique</item>
        <item>Capiz</item>
        <item>Guimaras</item>
        <item>Iloilo</item>
        <item>Negros Occidental</item>
    </string-array>
    <string-array name="array_region_vii_dropdown">
        <item>Bohol</item>
        <item>Cebu</item>
        <item>Negros Oriental</item>
        <item>Siquijor</item>
    </string-array>
    <string-array name="array_region_viii_dropdown">
        <item>Biliran</item>
        <item>Leyte</item>
        <item>Eastern Samar</item>
        <item>Northern Samar</item>
        <item>Samar</item>
        <item>Southern Leyte</item>
    </string-array>
    <string-array name="array_region_ix_dropdown">
        <item>Zamboanga del Norte</item>
        <item>Zamboanga del Sur</item>
        <item>Zamboanga Sibugay</item>
    </string-array>
    <string-array name="array_region_x_dropdown">
        <item>Bukidnon</item>
        <item>Camiguin</item>
        <item>Lanao del Norte</item>
        <item>Misamis Occidental</item>
        <item>Misamis Oriental</item>
    </string-array>
    <string-array name="array_region_xi_dropdown">
        <item>Davao de Oro</item>
        <item>Davao de Norte</item>
        <item>Davao Occidental</item>
        <item>Davao Oriental</item>
        <item>Davao del Sur</item>
    </string-array>
    <string-array name="array_region_xii_dropdown">
        <item>Cotabato</item>
        <item>South Cotabato</item>
        <item>Sultan Kudarat</item>
        <item>Sarangani</item>
    </string-array>
    <string-array name="array_region_xiii_dropdown">
        <item>Agusan del Norte</item>
        <item>Agusan del Sur</item>
        <item>Dinagat Islands</item>
        <item>Surigao del Sur</item>
        <item>Surigao del Norte</item>
    </string-array>
    <string-array name="array_region_car_dropdown">
        <item>Abra</item>
        <item>Apayao</item>
        <item>Ifugao</item>
        <item>Benguet</item>
        <item>Mountain Province</item>
        <item>Kalinga</item>
    </string-array>
    <string-array name="array_region_barmm_dropdown">
        <item>Basilan</item>
        <item>Lanao del Sur</item>
        <item>Maguindanao</item>
        <item>Sulu</item>
        <item>Tawi-tawi</item>
    </string-array>
    <string-array name="array_region_ncr_dropdown">
        <item>Manila</item>
        <item>Quezon City</item>
        <item>Makati</item>
        <item>Las Pinas</item>
        <item>Malabon</item>
        <item>Muntinlupa</item>
        <item>Mandaluyong</item>
        <item>Marikina</item>
        <item>Navotas</item>
        <item>Pasay</item>
        <item>Pasig</item>
        <item>Paranaque</item>
        <item>San Juan</item>
        <item>Venezuela</item>
        <item>Taguig</item>
    </string-array>
    <string name="title_what_is_ir_communication">
        What is Infrared (IR)?
    </string>
    <string name="text_what_is_ir_communication">
        Infrared is a type of electromagnetic radiation that\'s longer in wavelength than
        visible light but shorter than radio waves. It\'s commonly used in various technologies,
        including remote controls, thermal imaging, and communication systems.
        \n\n
        Infrared Wireless Communication makes use of infrared waves in wireless technology
        for digital data transfer.
    </string>
    <string name="title_types_of_ir_communication">
        Two Types of Infrared Communication
    </string>
    <string name="text_types_of_ir_communication">
        1. Point to Point: It requires a line of sight between the transmitter and a
        receiver. In other words the transmitter and the receiver should be pointed to each other
        and there shouldn’t be any obstacles between them. Example is the remote control
        communication.
        \n\n
        2. Diffuse Point: It doesn’t require any line of sight and the link between the
        transmitter and the receiver is maintained by reflecting or bouncing of the transmitted
        signal by surfaces like ceilings, roof, etc. Example is the wireless LAN communication
        system.
    </string>
    <string name="title_how_does_ir_communication_work">
        How does Infrared Communication Work?
    </string>
</resources>