<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".activty.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_shadowed_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/beige"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/shape_top_pink_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/top_line_with_rounded_corner"
                android:scaleType="fitXY"
                android:src="@drawable/ic_shape_solid_pink_thick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_greeting_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_hello"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:fontFamily="@font/jua"
                android:layout_marginTop="140dp"
                app:layout_constraintBottom_toTopOf="@id/textView_greeting_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_greeting_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_welcome"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="24sp"
                android:fontFamily="@font/jua"
                app:layout_constraintBottom_toTopOf="@id/imageView_robot_gif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/imageView_robot_gif"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_image_animated_robot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:fontFamily="@font/jua"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/beige"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:backgroundTint="@color/pink"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                app:rippleColor="@color/beige"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/button_register"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:fontFamily="@font/jua"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/beige"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:backgroundTint="@color/maroon"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="35dp"
                app:rippleColor="@color/pink"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_owner_name"
                android:fontFamily="@font/noto_sans_kr"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_register"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>