<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".activty.InfraredCommunicationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_shadowed_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/beige"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vector_back"
                android:contentDescription="@string/cd_back_button"
                android:background="@drawable/ic_ripple_transparent"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_courses"
                android:fontFamily="@font/jua"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/button_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/button_back"
                android:background="@drawable/ic_background_solid_pink">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_image_infrared_communication"
                    android:contentDescription="@string/text_infrared_communication"
                    />

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/beige"
                    android:textSize="24sp"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/jua"
                    android:paddingStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/text_infrared_communication"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/layout_header_container">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/button_lesson_zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:background="@drawable/ic_ripple_solid_white"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/imageview_lesson_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:src="@drawable/ic_image_zero"
                            android:contentDescription="@string/zero"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:background="@drawable/ic_background_solid_pink"
                            />

                        <TextView
                            android:id="@+id/textview_lesson_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textAlignment="textStart"
                            android:fontFamily="@font/noto_sans_kr_bold"
                            android:text="@string/title_what_is_ir_communication"
                            android:layout_marginStart="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imageview_lesson_zero"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textAlignment="textStart"
                            android:fontFamily="@font/noto_sans_kr"
                            android:text="@string/text_difficulty_easy"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="25dp"
                            app:layout_constraintTop_toTopOf="@id/textview_lesson_zero"
                            app:layout_constraintStart_toEndOf="@id/imageview_lesson_zero"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>