<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".activty.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_shadowed_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/beige"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_welcome"
                android:fontFamily="@font/jua"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/maroon"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toTopOf="@+id/button_user_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/button_user_profile"
                />

            <ImageButton
                android:id="@+id/button_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_vector_user"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_ripple_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_open_calculator"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_open_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:paddingVertical="5dp"
                android:fontFamily="@font/jua"
                android:textColor="@color/beige"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/calculator_sign"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/ic_ripple_solid_pink"
                android:drawableEnd="@drawable/ic_image_math_clipart"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logout"
                android:textColor="@color/beige"
                android:textAllCaps="true"
                android:fontFamily="@font/jua"
                android:paddingHorizontal="20dp"
                android:drawablePadding="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawableStart="@drawable/ic_vector_logout"
                android:background="@drawable/ic_ripple_solid_maroon"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>